# hnet

./: LICENSE  README.md  hnet.cabal
examples/: Mnist.hs
src/Neural/: Matrix.hs
tests/: Tests.hs
