name:                  hnet
version:               0.1
homepage:              https://github.com/Ultramann/hnet
license:               BSD3
license-file:          LICENSE
author:                Cary Goltermann
maintainer:            cary.goltermann@gmail.com
copyright:             Copyright: (c) 2017 Cary Goltermann
category:              ML
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs 
  hs-source-dirs:      tests
  build-depends:       base,
                     , hnet
